Bug 1940052 - Apply fixed position css to Android pip media query r=emilio,twisniewski

Differential Revision: https://phabricator.services.mozilla.com/D246364