xpcom/ds/StaticAtoms.py
@@ -55,6 +55,7 @@ STATIC_ATOMS = [
     Atom("mozsignature", "moz-signature"),  # Used by MailNews.
     Atom("_moz_bullet_font", "-moz-bullet-font"),
     Atom("_moz_is_glyph", "-moz-is-glyph"),
+    Atom("_moz_in_android_pip_mode", "-moz-in-android-pip-mode"),
     Atom("_moz_original_size", "_moz_original_size"),
     Atom("_moz_print_preview", "-moz-print-preview"),
     Atom("menuactive", "_moz-menuactive"),
@@ -2441,6 +2442,7 @@ STATIC_ATOMS = [
     Atom("layout_css_always_underline_links", "layout.css.always_underline_links"),
     Atom("layout_css_cached_scrollbar_styles_enabled", "layout.css.cached-scrollbar-styles.enabled"),
     Atom("layout_css_h1_in_section_ua_styles_enabled", "layout.css.h1-in-section-ua-styles.enabled"),
+    Atom("layout_css_android_pip_enabled", "layout.css.android-pip.enabled"),
     # Contextual Identity / Containers
     Atom("usercontextid", "usercontextid"),
     Atom("geckoViewSessionContextId", "geckoViewSessionContextId"),
